# CThreadPollingStaticServer

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  main.c
include/: cone_string.h  def.h  metadata.h  tcp.h  urlencoding.h
include/http/: event.h  eventid.h  eventloop.h  header.h
src/: cone_string.c  event.c  eventloop.c  header.c  main.c  metadata.c  tcp.c  urlencoding.c
